src/objects/Configuration_Site__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Modele__c</fullName>
        <label>Modèle</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LOV_GLO_MDL</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nom_Configuration__c</fullName>
        <label>Nom Configuration</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_Compte__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tech_Compte</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Configurations Site</relationshipLabel>
        <relationshipName>Configurations_Site</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Configuration Site</label>
    <nameField>
        <label>Nom de Configuration Site</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configurations Site</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>